// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test note listing item component render a note listing item component 1`] = `
<NoteListingItem
  author="author text"
  disabled={false}
  editable={true}
  edited="true"
  handleEditNote={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
    }
  }
  message="message text"
  timestamp="20210127"
>
  <li
    className="note "
  >
    <p
      className="note__meta"
    >
      <span
        className="note__meta note__meta--inner"
      >
        <span>
          author text
        </span>
        <a
          className="note__edit"
          href="#"
          onClick={[Function]}
        >
          Edit
          <svg
            className="icon icon--pen"
          >
            <use
              xlinkHref="#pen"
            />
          </svg>
        </a>
      </span>
      <span
        className="note__date"
      >
        <span
          className="note__date_created"
        >
          20210127
        </span>
        <br />
        <span
          className="note__date_edited"
        >
          (edited: 
          true
          )
        </span>
      </span>
    </p>
    <div
      className="note__content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "message text",
        }
      }
    />
  </li>
</NoteListingItem>
`;

exports[`Test note listing item component with author text length greater than 16 render a note listing item component with author text length greater than 16 1`] = `
<NoteListingItem
  author="author text author text"
  disabled={false}
  editable={true}
  edited="true"
  handleEditNote={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
    }
  }
  message="message text"
  timestamp="20210127"
>
  <li
    className="note "
  >
    <p
      className="note__meta"
    >
      <span
        className="note__meta note__meta--inner"
      >
        <span>
          author text auth...
        </span>
        <a
          className="note__edit"
          href="#"
          onClick={[Function]}
        >
          Edit
          <svg
            className="icon icon--pen"
          >
            <use
              xlinkHref="#pen"
            />
          </svg>
        </a>
      </span>
      <span
        className="note__date"
      >
        <span
          className="note__date_created"
        >
          20210127
        </span>
        <br />
        <span
          className="note__date_edited"
        >
          (edited: 
          true
          )
        </span>
      </span>
    </p>
    <div
      className="note__content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "message text",
        }
      }
    />
  </li>
</NoteListingItem>
`;

exports[`Test note listing item component with disabled prop render a note listing item component with disabled prop 1`] = `
<NoteListingItem
  author="author text"
  disabled={true}
  editable={true}
  edited="true"
  handleEditNote={
    [MockFunction] {
      "calls": Array [
        Array [
          1,
        ],
      ],
    }
  }
  message="message text"
  timestamp="20210127"
>
  <li
    className="note disabled"
  >
    <p
      className="note__meta"
    >
      <span
        className="note__meta note__meta--inner"
      >
        <span>
          author text
        </span>
        <a
          className="note__edit"
          href="#"
          onClick={[Function]}
        >
          Edit
          <svg
            className="icon icon--pen"
          >
            <use
              xlinkHref="#pen"
            />
          </svg>
        </a>
      </span>
      <span
        className="note__date"
      >
        <span
          className="note__date_created"
        >
          20210127
        </span>
        <br />
        <span
          className="note__date_edited"
        >
          (edited: 
          true
          )
        </span>
      </span>
    </p>
    <div
      className="note__content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "message text",
        }
      }
    />
  </li>
</NoteListingItem>
`;
